small changes on style

--- a/public/stylesheets/sass/main.sass
+++ b/public/stylesheets/sass/main.sass
@@ -159,6 +159,7 @@ a
 !left_width = 13%
 
 $main: #c82d5e
+//$main: #a41747
 $bg_content: #E9E9E9
 
 
@@ -242,7 +243,8 @@ a:hover
   width: 40%
   float: left
   line-height: 17px
-
+  a
+    font-weight: bold
 
 #inner
   font-size: 0.92em
@@ -682,7 +684,7 @@ input.radio2
 .forms_pdf
   width: 60%
   margin: 0 0 15px 0
-  padding: 0px 0px 10px 20px
+  padding: 0px 0px 10px 0
   float: left
   background: none
   form  
