--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -128,6 +128,8 @@ a:hover {
   width: 40%;
   float: left;
   line-height: 17px; }
+  #inner_content a {
+    font-weight: bold; }
 
 #inner {
   font-size: 0.92em; }
@@ -592,7 +594,7 @@ input.radio2 {
 .forms_pdf {
   width: 60%;
   margin: 0 0 15px 0;
-  padding: 0px 0px 10px 20px;
+  padding: 0px 0px 10px 0;
   float: left;
   background: none; }
   .forms_pdf div {
