--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -623,7 +623,9 @@ input.radio2 {
 #galleria {
   clear: left; }
   #galleria img {
-    float: left; }
+    float: left;
+    width: 100px;
+    padding: 0 15px 10px 0; }
 
 #flashes div {
   text-align: center;
