--- a/public/stylesheets/sass/main.sass
+++ b/public/stylesheets/sass/main.sass
@@ -717,7 +717,7 @@ input.radio2
   img
     float: left
     width: 100px
-    margin: 0 10px
+    padding: 0 15px 10px 0
   clear: left
   
 #flashes
