--- a/public/stylesheets/sass/main.sass
+++ b/public/stylesheets/sass/main.sass
@@ -330,7 +330,7 @@ a#profile_name
     color: #FFF
     padding: 3px 10px 4px
     text-transform: uppercase
-    float: left
+    float: right
     +border-radius-top(4px)
   ul
     padding: 0 5px
@@ -342,7 +342,7 @@ a#profile_name
     margin-bottom: 6px
   .insert_article
     margin-top: 10px
-  
+    float: left
   .date
     float: right
     
@@ -360,7 +360,7 @@ a#profile_name
 
 #likebox
   float: right
-  margin: 30px 10px
+  margin: 0 10px
   
 #banner 
   float: left
