--- a/app/views/sections/_nav.html.haml
+++ b/app/views/sections/_nav.html.haml
@@ -19,8 +19,8 @@
       %li#masterbutt= link_to "Accademia Cappiello", pag_path(tf "l_accademia", "about_us")
     
   #social
-    = link_to image_tag("fb_icon.png"), "http://www.facebook.com/pages/Accademia-dArte-e-Design-Leonetto-Cappiello-Firenze/124282164308467"
-    = link_to image_tag("vimeo_icon.png"), "http://vimeo.com/user5798268"
-    = link_to image_tag("flickr_icon.png"), "http://www.flickr.com/photos/accademiacappiello/"
-    = link_to image_tag("twitter_icon.png"), "http://twitter.com/Acc_Cappiello"
+    = link_to image_tag("icons/fb_icon.png"), "http://www.facebook.com/pages/Accademia-dArte-e-Design-Leonetto-Cappiello-Firenze/124282164308467"
+    = link_to image_tag("icons/vimeo_icon.png"), "http://vimeo.com/user5798268"
+    = link_to image_tag("icons/flickr_icon.png"), "http://www.flickr.com/photos/accademiacappiello/"
+    = link_to image_tag("icons/twitter_icon.png"), "http://twitter.com/Acc_Cappiello"
 
