--- a/public/stylesheets/sass/main.sass
+++ b/public/stylesheets/sass/main.sass
@@ -411,9 +411,21 @@ a#profile_name
 div#home_swf
   float: left
   margin: 0 1% 0 1.2%
-  width: 33%
+  width: 34%
+  div
+    float: left
+    width: 49%
+    position: relative
   img
     width: 100%
+  img.hover, img.hover2
+    display: none
+    position: absolute
+    top: 0
+  img.hover2  
+    left: 0
+  img.hoverEnd
+
 
 
 #nav_cont
