--- a/app/views/sections/_nav.html.haml
+++ b/app/views/sections/_nav.html.haml
@@ -1,16 +1,28 @@
 #nav_cont
   %ul#nav
     - pages.each_with_index do |page, idx|
-      %li
-        - children = page.children
-        - if !children.nil? && children != []
+      - unless page.title_url_en == "special_courses"
+        %li
+          - children = page.children
+          - if !children.nil? && children != []
+            %ul.subnav  
+              - children.map do |pag|
+                - pag_title = tr(pag).title.gsub(/(Visual|Interior) Design -/, '')
+                %li= link_to pag_title, pag_path(pag)
+            = link_to tr(page).title, "javascript:void(0)"
+          - else
+            = link_to tr(page).title, pag_path(page) 
+      - else
+        %li
           %ul.subnav  
-            - children.map do |pag|
-              - pag_title = tr(pag).title.gsub(/(Visual|Interior) Design -/, '')
-              %li= link_to pag_title, pag_path(pag)
-          = link_to tr(page).title, "javascript:void(0)"
-        - else
-          = link_to tr(page).title, pag_path(page) 
+            
+            %li= link_to "Autocad 2d", page_path(id: tf("autocad_2d_base", "autocad_1st_level"))
+            %li= link_to "3d Studio Max", page_path(id: "3d_studio_max")
+            %li= link_to "V-Ray", page_path(id: "vray")
+            %li= link_to "Autocad 3d", page_path(id: "autocad_3d_1")
+            %li= link_to "SketchUp", page_path(id: "sketchup")
+            %li= link_to "Corsi Speciali", pag_path(page) 
+          = link_to "Corsi", "javascript:void(0)"
       
     - unless master?
       /%li#concorso= link_to "Concorso", pag_path(tf "concorso", "competition")
