--- a/app/views/sections/_nav.html.haml
+++ b/app/views/sections/_nav.html.haml
@@ -15,8 +15,10 @@
       - else
         %li
           %ul.subnav  
-            
-            %li= link_to "Autocad 2d", page_path(id: tf("autocad_2d_base", "autocad_1st_level"))
+            %li
+              %ul.subnav.sub2  
+                %li= link_to "Autocad 2d", page_path(id: tf("autocad_2d_base", "autocad_1st_level"))
+              = link_to "Autocad 2d", page_path(id: tf("autocad_2d_base", "autocad_1st_level"))
             %li= link_to "3d Studio Max", page_path(id: "3d_studio_max")
             %li= link_to "V-Ray", page_path(id: "vray")
             %li= link_to "Autocad 3d", page_path(id: "autocad_3d_1")
@@ -24,14 +26,10 @@
             %li= link_to "Corsi Speciali", pag_path(page) 
           = link_to "Corsi", "javascript:void(0)"
       
-    - unless master?
-      /%li#concorso= link_to "Concorso", pag_path(tf "concorso", "competition")
-      %li#masterbutt= link_to "Master Cappiello", pag_path("formula_master")
-    - else
-      %li#masterbutt= link_to "Accademia Cappiello", pag_path(tf "l_accademia", "about_us")
     
   #social
-    = link_to image_tag("icons/fb_icon.png"), "http://www.facebook.com/pages/Accademia-dArte-e-Design-Leonetto-Cappiello-Firenze/124282164308467"
+    = link_to image_tag("icons/fb_icon.png"), "http://www.facebook.com/group.php?gid=25010319906"
+    -# "http://www.facebook.com/pages/Accademia-dArte-e-Design-Leonetto-Cappiello-Firenze/124282164308467"
     = link_to image_tag("icons/vimeo_icon.png"), "http://vimeo.com/user5798268"
     = link_to image_tag("icons/flickr_icon.png"), "http://www.flickr.com/photos/accademiacappiello/"
     = link_to image_tag("icons/twitter_icon.png"), "http://twitter.com/Acc_Cappiello"
