added jquert flickr photoset to fancybox

--- a/app/views/elements/_standard.html.haml
+++ b/app/views/elements/_standard.html.haml
@@ -1,8 +1,6 @@
-    
-#photos
-
+  
 #standard 
   - text = markup tr(@page).text
   = parse_text(text)
   
-  
+#photos{ set_id: 72157625778629231 }
