--- a/public/stylesheets/sass/main.sass
+++ b/public/stylesheets/sass/main.sass
@@ -366,6 +366,7 @@ a#profile_name
   float: left
   margin: 0 0 0 2.3%
   width: !content_width
+  z-index: 1
   img
     +box-shadow(0px, -3px, 10px, #333)
     
@@ -792,3 +793,11 @@ input.radio2
 .error_messages
   li
     color: #AD0100
+    
+// photos
+
+#photos
+  overflow: hidden
+  height: 150px
+  a
+    margin: 10px 5px
