jquery flickr gallery fixed and polished

--- a/app/views/pages/edit.html.haml
+++ b/app/views/pages/edit.html.haml
@@ -44,4 +44,16 @@
     %p !http://www.accademia-cappiello.it/images/cappiello_icon.png!
     %p= image_tag "http://www.accademia-cappiello.it/images/cappiello_icon.png"
   
+    
+    %h4 Video vimeo 
+    %p vimeo(ID_VIDEO)
+    %p reperibile dal link diretto al video: http://vimeo.com/19487331 
+    %p vimeo(19487331)
+    
+    %h4 Flickr Set Gallery 
+    %p flickr_gallery(SET_ID)
+    %p reperibile dal link diretto al set: http://www.flickr.com/photos/accademiacappiello/sets/72157625778629231/
+    %p vimeo(72157625778629231)
+    
+    
     = link_to "Vai alla Guida completa", "http://redcloth.org/hobix.com/textile/quick.html", class: "complete"
