--- a/public/stylesheets/sass/main.sass
+++ b/public/stylesheets/sass/main.sass
@@ -755,6 +755,7 @@ input.radio2
       width: 130px
 .forms_pdf.bg
   background: #DDD
+  padding-left: 20px
   
 #galleria
   img
@@ -794,10 +795,38 @@ input.radio2
   li
     color: #AD0100
     
+.icon
+  width: 30px
+
+.flickr_button
+  margin-right: 10px
+  float: right
+  padding-right: 5px
+  img
+    width: 28px
+    margin-top: 5px
+    float: right
+  span
+    display: block
+    line-height: 37px
+    float: right
+    margin: 0 10px
+  
 // photos
 
 #photos
+  margin-top: 30px
   overflow: hidden
-  height: 150px
+  height: 175px
   a
-    margin: 10px 5px
+    margin: 0 5px
+    opacity: 0.7
+    img
+      margin: 5px 0
+      border: 1px solid transparent
+  a:hover
+    background: none
+    opacity: 1
+  a:hover img
+    border: 1px solid #999    
+    
