--- a/app/views/elements/_standard.html.haml
+++ b/app/views/elements/_standard.html.haml
@@ -3,4 +3,6 @@
   - text = markup tr(@page).text
   = parse_text(text)
   
-#photos{ set_id: 72157625778629231 }
+-# #photos{ :"data-set_id" => 72157625778629231 }
+-# :plain
+-#   <div id='photos' data-set_id='72157625778629231' ></div>
