--- a/public/stylesheets/sass/main.sass
+++ b/public/stylesheets/sass/main.sass
@@ -519,7 +519,6 @@ ul.subnav
   right: -$subnav_width
   z-index: 3
 
-
 #nav li 
   .subnav.sub2
     display: none
@@ -528,6 +527,7 @@ ul.subnav
   .subnav li:hover .subnav.sub2 li a
     background: $main
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#c82d5e', endColorstr='#c82d5e',GradientType=0 )
+    border: 1px solid $main
   .subnav li .subnav.sub2 li:hover a
     background: #a82949
     +gradient_bg_perc(#7d1622, #a82949, 20%)
