--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,7 +1,10 @@
+- unless Rails.env == "production"
+  - debug = "anonym_id: #{session[:anonym_id]}"
+
 !!! Strict
 %html{ html_attrs("en_EN") }
   %head
-    %title= site_title "#{" - #{@title}" unless @title.blank?}"
+    %title= site_title "#{" - #{@title}" unless @title.blank?}#{debug}"
     %meta{ :content => "text/html; charset=utf-8", "http-equiv" => "content-type" }/    
     %meta{ content: meta_description, name: "description"}/
     %meta{ content: meta_keywords, name: "keywords"}/
