--- a/app/views/sections/_nav.html.haml
+++ b/app/views/sections/_nav.html.haml
@@ -11,17 +11,10 @@
       - when "special_courses" # corsi brevi
         = render partial: "sections/special_courses", locals: { page: page }
       - when "dates_and_times"
+      - when "interior_design"      
       - else
         %li
-          - children = page.children
-          - if !children.nil? && children != []
-            -# %ul.subnav  
-            -#   - children.map do |pag|
-            -#     - pag_title = tr(pag).title.gsub(/(Visual|Interior) Design -/, '')
-            -#     %li= link_to pag_title, pag_path(pag)
-            -# = link_to tr(page).title, js_void
-          - else
-            = link_to tr(page).title, pag_path(page) 
+          = link_to tr(page).title, pag_path(page) 
 
     
   #social
