--- a/app/views/elements/_home.haml
+++ b/app/views/elements/_home.haml
@@ -1,6 +1,6 @@
 %div#inner_content
   
-  %p= markup tr(@page).text
+  = markup tr(@page).text
   %ul
     %li= link_to "Video Visual Design", "http://vimeo.com/19487440"
     %li= link_to "Video Interior Design", "http://vimeo.com/19487331"
