--- a/public/stylesheets/sass/main.sass
+++ b/public/stylesheets/sass/main.sass
@@ -324,7 +324,8 @@ a#profile_name
   .news, .eventi, .lavoro
     margin: 0 0 10px
     text-shadow: 2px 2px 2px #FFF
-  h5 div
+  h5 span
+    display: block
     text-align: left
     background: #888
     color: #FFF
