--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -219,7 +219,8 @@ a#profile_name {
   #news .news, #news .eventi, #news .lavoro {
     margin: 0 0 10px;
     text-shadow: 2px 2px 2px white; }
-  #news h5 div {
+  #news h5 span {
+    display: block;
     text-align: left;
     background: #888888;
     color: white;
@@ -717,12 +718,12 @@ input.radio2 {
   height: 175px; }
   #photos a {
     margin: 0 5px;
-    opacity: 0.7; }
+    opacity: 1; }
     #photos a img {
       margin: 5px 0;
       border: 1px solid transparent; }
   #photos a:hover {
     background: none;
-    opacity: 1; }
+    opacity: 0.8; }
   #photos a:hover img {
     border: 1px solid #999999; }
