--- a/public/stylesheets/sass/main.sass
+++ b/public/stylesheets/sass/main.sass
@@ -633,6 +633,9 @@ input.submit
   width: auto
   float: right  
 
+.date_select
+  margin: 5px 0 10px
+
 .new, .edit 
   textarea
     height: 450px
