--- a/app/views/sections/_header.html.haml
+++ b/app/views/sections/_header.html.haml
@@ -7,6 +7,8 @@
     = image_tag "logo.png", id: "logo"
 #banner
   - files = Dir.glob("#{Rails.root}/public/images/banner/#{master? ? "master" : "main"}/*").sort
+  - files = files.sort_by { rand } # randomize
+  - files = files[0..6] # limit
   - files.each do |file|
     = image_tag file.gsub("#{Rails.root}/public", '')#, class: "first"
     -# image_tag "banner/2.png"#, class: "last"
