--- a/app/views/forms/_form.html.haml
+++ b/app/views/forms/_form.html.haml
@@ -11,7 +11,7 @@
       = f.check_box :int_brevi_interior
       = f.label     :int_brevi_interior,  "#{tf "corsi brevi", "short courses"} - INTERIOR DESIGN"
     
-      %h3= tf("RICHIESTA DI PARTECIPAZIONE", "REQUEST FOR PARTICIPATION")
+      %h3= tf("RICHIESTA DI PARTECIPAZIONE GRATUITA", "REQUEST FREE PARTICIPATION")
       = f.check_box :int_stage_visual
       = f.label     :int_stage_visual,    "#{tf "stage gratuito", "free stage"} - VISUAL DESIGN"
       = f.check_box :int_stage_interior
