--- a/public/stylesheets/sass/main.sass
+++ b/public/stylesheets/sass/main.sass
@@ -308,6 +308,18 @@ a#profile_name
 #profile_links
   background: #999
    
+
+#news
+  li
+    clear: both
+  span.title
+    width: 60%
+    display: block
+    float: left
+  span.date
+    width: 40%
+    display: block
+    float: right
     
 #news 
   text-align: right
@@ -349,6 +361,7 @@ a#profile_name
     
   a:hover .date
     color: #333
+    
   
 .articles.show .date
   margin-top: 5px
