--- a/app/views/sections/_special_courses.html.haml
+++ b/app/views/sections/_special_courses.html.haml
@@ -2,6 +2,7 @@
   %ul.subnav  
     %li= link_to "Visual Design", page_path(id: tf("visual_design_corsi_brevi", "visual_design_short_courses"))
     %li= link_to "Interior Design", page_path(id: tf("interior_design_corsi_brevi", "interior_design_short_courses"))
+    %li= link_to "Grafica Editoriale", page_path(id: tf("grafica_editoriale", "press_graphics"))
     %li
       %ul.subnav.sub2  
         %li= link_to tf("Base", "Level 1"), page_path(id: tf("autocad_2d_base", "autocad_2d_1st_level"))
