--- a/public/stylesheets/sass/main.sass
+++ b/public/stylesheets/sass/main.sass
@@ -231,6 +231,11 @@ a:hover
 #content p
   text-shadow: 1px 2px 0px #FFF
   margin-bottom: 12px
+  width: 59%
+  text-align: justify
+  
+#content .home p, #content #aside p, #content .article_cont p
+  width: 100%
 
 #content #aside p
   padding-top: 30px
@@ -526,11 +531,11 @@ div#home_swf
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#211949', endColorstr='#2d2264',GradientType=0 )
   
   
-$subnav_width = 140px
+$subnav_width = 150px
 ul.subnav
   position: absolute
   width: $subnav_width
-  right: -$subnav_width
+  right: -$subnav_width - 1px
   z-index: 3
 
 #nav li 
