css flickr gallery fix

--- a/public/stylesheets/sass/main.sass
+++ b/public/stylesheets/sass/main.sass
@@ -231,8 +231,10 @@ a:hover
 #content p
   text-shadow: 1px 2px 0px #FFF
   margin-bottom: 12px
-  width: 59%
   text-align: justify
+  
+#content .master p  
+  width: 59%  
   
 #content .home p, #content #aside p, #content .article_cont p
   width: 100%
@@ -607,6 +609,10 @@ $video_width: 360px
     margin: 4px 0
   p 
     text-shadow: none
+  a
+    color: #FFF
+    text-shadow: none
+    font-weight: bold
     
 .master #aside
   background: #392C79
@@ -837,14 +843,14 @@ input.radio2
 // photos
 
 #photos
-  margin-top: 30px
+  margin: 30px 0 0 0
   overflow: hidden
-  height: 175px
   a
-    margin: 0 5px
+    margin: 0 0.5%
     opacity: 1
     img
-      margin: 5px 0
+      width: 12.9%
+      margin: 3px 0
       border: 1px solid transparent
   a:hover
     background: none
