--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -116,8 +116,10 @@ a:hover {
 #content p {
   text-shadow: 1px 2px 0px white;
   margin-bottom: 12px;
-  width: 59%;
   text-align: justify; }
+
+#content .master p {
+  width: 59%; }
 
 #content .home p, #content #aside p, #content .article_cont p {
   width: 100%; }
@@ -485,6 +487,10 @@ ul#selection {
     margin: 4px 0; }
   #aside p {
     text-shadow: none; }
+  #aside a {
+    color: white;
+    text-shadow: none;
+    font-weight: bold; }
 
 .master #aside {
   background: #392c79; }
@@ -732,14 +738,14 @@ input.radio2 {
     margin: 0 10px; }
 
 #photos {
-  margin-top: 30px;
-  overflow: hidden;
-  height: 175px; }
+  margin: 30px 0 0 0;
+  overflow: hidden; }
   #photos a {
-    margin: 0 5px;
+    margin: 0 0.5%;
     opacity: 1; }
     #photos a img {
-      margin: 5px 0;
+      width: 12.9%;
+      margin: 3px 0;
       border: 1px solid transparent; }
   #photos a:hover {
     background: none;
