--- a/app/views/forms/_form.html.haml
+++ b/app/views/forms/_form.html.haml
@@ -28,8 +28,9 @@
       = f.password_field :password
       = f.label :birthplace, tf("Nato a", "Born")
       = f.text_field :birthplace 
-      = f.label :birthdate, tf("Data", "Birthdate")    
-      = f.text_field :birthdate    
+      = f.label :birthdate, tf("Data", "Birthdate")
+      .date_select
+        = f.date_select :birthdate    
       = f.label :address, tf("Indirizzo", "Address")  
       = f.text_field :address   
       = f.label :city, tf("Città", "City")  
