--- a/public/stylesheets/sass/main.sass
+++ b/public/stylesheets/sass/main.sass
@@ -479,6 +479,8 @@ div#home_swf
       border: 1px solid #871623
       border-top: 1px solid $main
       border-bottom: 1px solid $main
+      width: 83%
+      text-align: right
   li .subnav
     display: none
   li:hover .subnav
