--- a/public/stylesheets/sass/main.sass
+++ b/public/stylesheets/sass/main.sass
@@ -499,6 +499,7 @@ div#home_swf
     background: $main
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#c82d5e', endColorstr='#c82d5e',GradientType=0 )
     border: 1px solid $main
+    width: auto
   .subnav li:hover a      
     background: #a82949
     +gradient_bg_perc(#7d1622, #a82949, 20%)
