--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -379,7 +379,8 @@ div#home_swf {
   #nav .subnav li a {
     background: #c82d5e;
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#c82d5e', endColorstr='#c82d5e',GradientType=0 );
-    border: 1px solid #c82d5e; }
+    border: 1px solid #c82d5e;
+    width: auto; }
   #nav .subnav li:hover a {
     background: #a82949;
     background: -moz-linear-gradient(top, #7d1622 0%, #a82949 20%, #a82949 80%, #7d1622 100%);
